--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 title: Ben Ge
-logo: C:\Users\思庭\Documents\Lenovo Yoga July 2025
+logo: "C:\Users\思庭\Documents\Lenovo Yoga July 2025\Deloitte Headshot 2024.JPG"
 theme: jekyll-theme-minimal
